fixed nav to look fine on mobile and desktop

--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -8,64 +8,5 @@ $dark: #333333;
 
 
 
-// Breakpoints
-$medium-screen: 600px;
-$large-screen: 900px;
-
 // Typography
-@import url('https://fonts.googleapis.com/css?family=Poppins');
-@import url('https://fonts.googleapis.com/css?family=Raleway');
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
-$base-font-family: sans-serif;
-$heading-font-family: $base-font-family;
-
-// Font Sizes
-$base-font-size: 1em;
-
-// Line height
-$base-line-height: 1.5;
-$heading-line-height: 1.2;
-
-// Other Sizes
-$base-border-radius: 3px;
-$base-spacing: $base-line-height * 1em;
-$small-spacing: $base-spacing / 2;
-$base-z-index: 0;
-
-// Colors
-$blue: #1565c0;
-$dark-gray: #333;
-$medium-gray: #999;
-$light-gray: #ddd;
-
-// Font Colors
-$base-font-color: $dark-gray;
-$action-color: $blue;
-
-// Border
-$base-border-color: $light-gray;
-$base-border: 1px solid $base-border-color;
-
-// Background Colors
-$base-background-color: #fff;
-$secondary-background-color: tint($base-border-color, 75%);
-
-// Background Image
-$cloth-alike-url: url("../../images/cloth_alike.png");
-$deg-fabric-url: url("../../images/45degreee_fabric.png");
-$always-grey-url: url("../../images/always_grey.png");
-$cheap-diagonal-url: url("../../images/cheap_diagonal_fabric.png");
-$fabric-plaid-url: url("../../images/fabric_plaid.png");
-$gray-jean-url: url("../../images/gray_jean.png");
-$light-honeycomb-url: url("../../images/light_honeycomb.png");
-$paper-url: url("../../images/paper_1.png");
-
-$background-image-url: $cloth-alike-url;
-
-// Forms
-$form-box-shadow: inset 0 1px 3px rgba(#000, 0.06);
-$form-box-shadow-focus: $form-box-shadow, 0 0 5px adjust-color($action-color, $lightness: -5%, $alpha: -0.3);
-
-// Animations
-$base-duration: 150ms;
-$base-timing: ease;
