--- a/app/assets/stylesheets/partials/_index.scss
+++ b/app/assets/stylesheets/partials/_index.scss
@@ -50,18 +50,25 @@ header {
 
 nav {
   background-color: $seagreen;
-  width: 20%;
+  width: 100%;
   float: right;
   display: none;
+  position: relative;
   font-family: 'Quicksand', sans-serif !important;
 
 
     div {
+      border-top: 0.25px solid $seagreenM;
       padding: 20px;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      @media (min-width: 700px){
+        display:inline-flex;
+        width: 32%;
+        border: none;
+      }
       &:hover {
         cursor: pointer;
         background-color: tint($seagreen, 25%);
@@ -83,7 +90,7 @@ a {
 main {
   margin-top: 50px;
   height: 100%;
-  display: flex;
+  display: block;
   justify-content: center;
   align-items: flex-start;
 }
